<resources>
    <string name="app_name">NomadWorker</string>
    <string name="home_label">홈</string>
    <string name="feed_label">피드</string>
    <string name="search_label">검색</string>
    <string name="my_page_label">마이페이지</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="sign_in_text">로그인</string>
    <string name="sign_up_text">회원가입</string>
    <string name="verify_number">인증 번호</string>
    <string name="next">다음</string>
    <string name="confirm_password">비밀번호 확인</string>
    <string name="nickname">닉네임</string>
    <string name="complete_signup">가입하기</string>
    <string name="signup_email_title">이메일을 입력해주세요.</string>
    <string name="signup_email_title_message">이메일 인증을 위해 정확한 이메일을 입력해주세요.</string>
    <string name="signup_verify">인증하기</string>
    <string name="signup_verify_title">인증 번호를 입력해주세요.</string>
    <string name="signup_verify_title_message">작성하신 이메일로 전송 된 인증 번호를 입력해주세요.</string>
    <string name="resend_verify_code">인증 번호를 못 받았어요 :(</string>
    <string name="signup_password_title">비밀번호를 입력해주세요.</string>
    <string name="signup_password_title_message">영어와 숫자, 문자를 포함해 8~15자리 이내로 입력해주세요.</string>
    <string name="signup_nickname_title">사용하실 닉네임을 입력해주세요.</string>
    <string name="signup_nickname_title_message">닉네임은 수정이 불가하니 신중하게 입력해주세요 :)</string>
    <string name="correct_password">알맞은 비밀번호 입니다 :)</string>
    <string name="incorrect_password">적합하지 않은 비밀번호 입니다 :(</string>
    <string name="same_password">비밀번호가 일치합니다!</string>
    <string name="different_password">비밀번호가 달라요. 확인해주세요!</string>
    <string name="correct_email_format">여기로 인증 번호를 보낼게요!</string>
    <string name="incorrect_email_format">잘못된 이메일 형식이에요 :(</string>
    <string name="already_user">이미 존재하는 이메일입니다!</string>
    <string name="verify_email_success">인증 되었어요!</string>
    <string name="verify_email_fail">인증 번호가 틀렸습니다. 다시 확인해주세요!</string>
    <string name="usable_nickname">사용 가능한 닉네임이에요!</string>
    <string name="unusable_nickname">이미 존재하는 닉네임이에요 :(</string>
    <string name="skip_on_boarding">SKIP</string>
    <string name="permission_title">원활한 Nomad Worker 앱 사용을 위해\n아래 권한을 허용해주세요.</string>
    <string name="default_permission">필수 접근 권한</string>
    <string name="location_info">위치 정보</string>
    <string name="location_info_desc">내 위치 근처 장소를 제공하기 위한 권한</string>
    <string name="optional_permission">선택 접근 권한</string>
    <string name="camera">카메라</string>
    <string name="camera_desc">피드 작성 시 장소 촬영을 위한 권한</string>
    <string name="storage">저장소</string>
    <string name="storage_desc">피드 작성 시 장소 이미지 첨부를 위한 권한</string>
    <string name="permission_notice_desc">필수 권한을 허용하지 않는 경우 앱이 정상적으로 작동하지 않을 수 있습니다.</string>
    <string name="ok">확인</string>
    <string name="current_location_title">현재 위치를 확인해보세요</string>
    <string name="home_category_title">지역 별 근무 장소를 확인 해보세요</string>
    <string name="home_nearby_title">내 근처 근무 장소를 확인 해보세요</string>
    <string name="home_recommend_title">추천하는 근무 장소를 확인 해보세요</string>
    <string name="set_current_location">현재 위치로 설정</string>
    <string name="my_page_user_profile_modification">프로필 이미지 변경하기</string>
    <string name="my_page_user_logout">로그아웃</string>
    <string name="seoul">서울</string>
    <string name="jeju">제주</string>
    <string name="busan">부산</string>
    <string name="gangneung">강릉</string>
    <string name="cafe">카페</string>
    <string name="office">오피스</string>
    <string name="location">지역</string>
    <string name="place">장소</string>
    <string name="search_detail">상세 검색</string>
    <string name="weekday_time_label">평일</string>
    <string name="weekend_time_label">주말</string>
    <string name="new_feed_content_title">게시글 문구를 입력하세요.</string>
    <string name="new_feed_content_subtitle">뭐라고 적는게 좋을까요?</string>
    <string name="new_feed_content_input_text_hint">ex) 조용하고 산 좋고 물 좋은 모현으로 오세요.</string>
    <string name="new_feed_photo_title">사진을 선택하세요.</string>
    <string name="new_feed_photo_subtitle">사진은 최대 1장 선택 가능합니다.</string>
    <string name="new_feed_place_title">장소를 입력하세요.</string>
    <string name="new_feed_place_subtitle">검색바에 원하는 곳을 입력해주세요.</string>
    <string name="register_feed">등록하기</string>
    <string name="check_duplicate_nickname">닉네임 중복확인</string>
    <string name="request_permission_denied">권한을 허용해주셔야 제대로 된 앱 사용이 가능합니다 :)</string>
    <string name="request_permission_granted">권한이 허용됐습니다.</string>
    <string name="permission_notice_red">접근 권한을 거부했다면 다시 허용하기를 눌러주세요. 아무런 반응이 없다면 확인을 눌러주세요. 필요할 때 요청 드리겠습니다 :)</string>
    <string name="permission_check_button">허용하기</string>

    <string name="unit_kr_currency">%s원</string>

</resources>