<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_search_option"
            style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back_24"
            app:title="상세 검색" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_option_location"
            style="@style/TextSubtitle1.Bold.Black01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_search_option" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_option_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_option_location">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_seoul"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seoul"
                android:textColor="@drawable/selector_chip_text_color" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_jeju"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jeju"
                android:textColor="@drawable/selector_chip_text_color" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_busan"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/busan"
                android:textColor="@drawable/selector_chip_text_color" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_gangneung"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gangneung"
                android:textColor="@drawable/selector_chip_text_color" />

        </com.google.android.material.chip.ChipGroup>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_option_place"
            style="@style/TextSubtitle1.Bold.Black01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/place"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cg_option_location" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_option_place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_option_place">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_cafe"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cafe"
                android:textColor="@drawable/selector_chip_text_color" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_office"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/office"
                android:textColor="@drawable/selector_chip_text_color" />

        </com.google.android.material.chip.ChipGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_complete"
            style="@style/TextSubtitle1.Bold.White"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/bg_blue_radius_10"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>