<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_sign_up"
            style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/menu_toolbar"
            app:navigationIcon="@drawable/ic_back_24"
            app:title="@string/sign_up_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            style="@style/TextHeadLine5.Black01.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/signup_verify_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_sign_up" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/signup_verify_title_message"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_verify_code"
            style="@style/TextSubtitle3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_bluegrey_radius_10"
            android:hint="@string/verify_number"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:paddingTop="16dp"
            android:paddingEnd="12dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_message" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_status_message"
            style="@style/TextCaption.Accent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="4dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@id/et_verify_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_verify_code"
            tools:text="인증 번호가 틀렸어요. 다시 확인해주세요." />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_resend_code"
            style="@style/TextSubtitle3.Blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/resend_verify_code"
            app:layout_constraintBottom_toTopOf="@id/pb_status"
            app:layout_constraintEnd_toEndOf="@id/pb_status" />

        <ProgressBar
            android:id="@+id/pb_status"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:progress="50"
            android:progressDrawable="@drawable/bg_progress"
            app:layout_constraintBottom_toTopOf="@id/btn_next"
            app:layout_constraintEnd_toEndOf="@id/btn_next"
            app:layout_constraintStart_toStartOf="@id/btn_next" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            style="@style/TextSubtitle1.Bold.White"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/bg_grey06_radius_10"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>